# trading_platform

./: .dockerignore  .gitallowed  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.ngrok  Ethics Approval Consent Form.docx  Ethics_Approval_Consent_Form.md  Front End Updates TBD.docx  LICENSE  README.md  SUBMODULE_WORKFLOW.md  deploy-server.sh  deploy.sh  docker-compose.server.yml  docker-compose.yml  form.ipynb  interval.md  nginx.conf  ngrok.yml  questionaire.md  run.sh  test.ipynb  test_prolific_auth.py  test_prolific_login.py  trading_platform_run.sh  update_request.md  webhook-deploy.py
back/: .gitignore  README.md  analyze_log.py  benchmark.py  dspy_optimize.py  pyproject.toml  pytest.ini  remove.py  requirements.txt
back/analysis/: Simulations Additional Info June 19.xlsx  config.yaml  helper_parameterize.py  helper_prepare_data.py  record_lobster.py  record_message.py  record_pm.py  run_evaluation.py  run_lobster.py  run_server.py  run_simulation.py  utilities.py
back/api/: auth.py  calculate_metrics.py  endpoints.py  endpoints_old.py  google_sheet_auth.py  lab_auth.py  logfiles_analysis.py  market_pipeline.py  prolific_auth.py  random_picker.py
back/client_connector/: main.py  trader_manager.py
back/config/: agentic_prompts.yaml  app.yaml  treatments.yaml
back/core/: __init__.py  data_models.py  events.py  handlers.py  market_handler.py  migration.py  order_book.py  orderbook_manager.py  parameter_logger.py  rabbitmq_manager.py  role_assignment_manager.py  services.py  session_handler.py  session_manager.py  simple_market_handler.py  (+6 more)
(+247 files in other folders)
