[package]
name = "rust_order_book"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
uuid = { version = "1.3", features = ["v4"] }

[lib]
name = "rust_order_book"
crate-type = ["cdylib"]